// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyLink displays statically as expected Snapshot of CopyLink is the same 1`] = `
<h1>
  Inner content
</h1>
`;

exports[`CopyLink displays statically as expected Snapshot of CopyLink with ID is the same 1`] = `
<div
  className="flex items-center undefined"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h1
    attribs={
      Object {
        "id": "example-id",
      }
    }
  >
    Inner content
  </h1>
  <div
    className="relative"
    onKeyPress={[Function]}
  >
    <button
      aria-describedby="link-hover-tooltip"
      className="sc-bczRLJ hEuugE"
      id="example-id"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex="0"
    >
      <svg
        height="16"
        version="1.1"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16.936 7.065c-0.39-0.39-1.020-0.389-1.408 0l-8.438 8.439c-0.387 0.388-0.388 1.018 0 1.405 0.39 0.39 1.019 0.389 1.407 0l8.439-8.438c0.386-0.388 0.387-1.017 0-1.406v0z"
        />
        <path
          d="M8.496 22.536l3.516-3.516c1.441-1.441 1.808-3.545 1.11-5.329l-1.657 1.657c0.043 0.814-0.237 1.644-0.858 2.265l-3.518 3.517c-1.165 1.165-3.053 1.165-4.22 0-1.165-1.165-1.165-3.055 0-4.22l3.517-3.516c0.623-0.622 1.451-0.901 2.266-0.859l1.657-1.657c-1.784-0.697-3.888-0.331-5.329 1.11l-3.516 3.517c-1.941 1.941-1.942 5.090 0 7.031 1.942 1.943 5.090 1.943 7.032 0v0z"
        />
        <path
          d="M13.418 6.362l3.518-3.517c1.164-1.165 3.053-1.165 4.219 0s1.166 3.055 0 4.22l-3.517 3.516c-0.622 0.622-1.45 0.901-2.265 0.859l-1.658 1.657c1.784 0.697 3.888 0.331 5.33-1.109l3.516-3.517c1.941-1.942 1.942-5.091 0-7.032-1.942-1.942-5.090-1.942-7.033 0l-3.516 3.516c-1.44 1.441-1.807 3.546-1.109 5.33l1.657-1.658c-0.043-0.815 0.237-1.643 0.858-2.265v0z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`LinkHoverPopup displays statically as expected Snapshot of LinkHoverPopup is the same 1`] = `
<div
  className="sc-gsnTZi LulRR"
>
  Hover popup
</div>
`;

exports[`LinkHoverPopup displays statically as expected Snapshot of LinkHoverPopup with Failure is the same 1`] = `
<div
  className="sc-gsnTZi epoIIV"
>
  Failure
</div>
`;

exports[`LinkHoverPopup displays statically as expected Snapshot of LinkHoverPopup with Success is the same 1`] = `
<div
  className="sc-gsnTZi jownJl"
>
  Success
</div>
`;
